make some fixes in api.php file
