# routes/api.php
@@ -8,6 +8,28 @@ use App\Http\Controllers\CountryController;
 use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\CharacterController;
 
+
+Route::prefix('characters')
+    ->controller(CharacterController::class)
+    ->group(function(){
+        Route::get('/', 'index')->name('get.characters');
+        Route::get('/search', 'getCharactersBySearch')->name('get.characters.search');
+        Route::get('/{character}', 'getCharacterDetail')->name('get.character.details');
+        Route::get('/level/{level}', 'getCharactersByLevel')->name('get.characters.level');
+});
+
+Route::prefix('categories')
+    ->middleware('auth:sanctum')
+    ->controller(CategoryController::class)
+    ->group(function(){
+        Route::post('/', 'store')->name('store.category');
+        Route::get('/', 'index')->name('get.categories');
+        Route::get('/tree', 'getCategoryTree')->name('get.category.tree');
+        Route::get('/root', 'getCategoryRoot')->name('get.category.root');
+        Route::get('/cards/{categoryId}', 'getCategoryCards')->name('get.category.cards');
+        Route::get('/quiz/{categoryId}', 'getCategoryQuizCharacters')->name('get.category.quiz.characters');
+});
+
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
@@ -21,17 +43,4 @@ Route::get('countries', [CountryController::class, 'index']);
 Route::post('/card', [CardController::class, 'storeCard']);
 Route::get('/card/{cardId}', [CardController::class, 'show']);
 Route::delete('/card/{card}', [CardController::class, 'destroy']);
-Route::get('/user-categories-cards/{userId}', [CategoryController::class, 'getUserCategoryTree']);
 Route::post('/card-description/{card}', [CardController::class, 'description']);
-
-Route::post('/category', [CategoryController::class, 'store']);
-Route::get('/user-category/{userId}', [CategoryController::class, 'getUserCategories']);
-Route::get('/root-categories/{userId}', [CategoryController::class, 'getRootCategories'])->name('get.root.categories');
-Route::get('/cards-and-categories/{categoryId}', [CategoryController::class, 'getCardsAndCategories'])->name('get.cards.categories');
-Route::middleware('auth:sanctum')->get('/test-categories', [CategoryController::class, 'getTestCategories']);
-Route::middleware('auth:sanctum')->get('/test-characters/{categoryId}', [CategoryController::class, 'getTestCharacters']);
-
-Route::get('/characters', [CharacterController::class, 'index']);
-Route::get('/character/{character}', [CharacterController::class, 'getCharacterDetail']);
-Route::get('/characters/search', [CharacterController::class, 'getCharactersBySearch']);
-Route::get('/characters/{level}', [CharacterController::class, 'getCharactersByLevel']);
